--- a/templates/alumnxs/inicio-alumnxs.html
+++ b/templates/alumnxs/inicio-alumnxs.html
@@ -28,11 +28,13 @@
         <div class="nav-container">
           <a href="{{ url_for('index') }}">
             <div class="logo"><img src="../../static/css/img/alumnx-icon.png" width="40" height="60">
-            Evaluación Docente
+                 Evaluación Docente
             </div>
-            </a>
+          </a>
             <ul class="nav-links">
                 <li><a href="{{ url_for('logout') }}">Cerrar sesión</a></li>
+                <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
+
             </ul>
         </div>
     </nav>
@@ -41,6 +43,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-nav-links">
             <li><a href="{{ url_for('logout') }}">Cerrar sesión</a></li>
+            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
         </ul>
     </div>
 
@@ -90,30 +93,28 @@
 {% endfor %}
 
 </section>
+
 <!-- Footer -->
   <footer class="footer">
      <div class="container">
       <div class="row">
         <div class="footer-col">
-          <h4>Evaluación Docente</h4>
-          <ul>
-            <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
-
-          </ul>
-        </div>
-        <div class="footer-col">
           <h4>Contáctanos</h4>
           <ul>
-            <li><a href="mailto:evaluaciondocente@uaem.edu.mx">evaluaciondocente@uaem.edu.mx</a></li>
-            <li><a href="tel:+557770000000"> +55 (777) 000 0000 (Llamadas)</a></li>
+            <li><a href="mailto:evaluaciondocente@uaem.edu.mx" target="_blank" rel="noopener noreferrer">evaluaciondocente@uaem.edu.mx</a></li>
+            <li><a href="tel:7770000000" target="_blank" rel="noopener noreferrer"> (777) 000 0000 (Llamadas)</a></li>
           </ul>
         </div>
 
         <div class="footer-col">
           <h4>Síguenos</h4>
           <div class="social-links">
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+              <img src="../../../static/css/img/fb-icon.png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+              <img src="../../../static/css/img/ig-icon.png" alt="Instagram">
+            </a>
           </div>
         </div>
       </div>
