--- a/templates/alumnxs/login-alumnxs.html
+++ b/templates/alumnxs/login-alumnxs.html
@@ -31,6 +31,11 @@
             <ul class="nav-links">
                  <li><a href="/">Cambiar tipo de usuarix</a></li>
             </ul>
+             <div class="hamburger" id="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
         </div>
     </nav>
 
@@ -110,5 +115,7 @@
       </div>
      </div>
   </footer>
+  <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
+
 </body>
 </html>
