--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,15 @@
 
 
 
-    <!-- Users Section -->
-
-  <section id="users" class="users">
+ 
+  <section class="start-section">
     <p class="outlined-text">Evaluación Docente</p>
+  </section>
+
+
+   <!-- Users Section -->
+  <section id="users" class="users">
+    
     <div class="users-grid">
 
         <div class="users-item">
