--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -65,7 +65,7 @@ nav.scrolled {
 
         .nav-links a {
             text-decoration: none;
-            color: var(--text-primary);
+            color: var(--brown);
             font-weight: 500;
             font-size: 0.95rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -74,7 +74,7 @@ nav.scrolled {
         }
 
         .nav-links a:hover {
-            color: var(--primary-color);
+            color: var(--orange);
             transform: translateY(-1px);
         }
 
@@ -101,8 +101,9 @@ nav.scrolled {
             right: -100%;
             width: 100%;
             height: 100vh;
-            background: --gradient-updown;
+            background: var(--top-down-gradient);
             backdrop-filter: blur(20px);
+            color: var(--brown);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -139,10 +140,10 @@ nav.scrolled {
             font-family: "Fugaz One", sans-serif;
             font-size: 2.5rem;
             font-weight: 500;
-            color: var(--primary-color);
+            color: var(--orange);
             text-decoration: none;
             transition: all 0.3s ease;
-            background: var(--text-primary);
+            background: var(--brown);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -151,6 +152,33 @@ nav.scrolled {
         .mobile-nav-links a:hover {
             transform: scale(1.05);
         }
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 6px;
+}
+
+.hamburger span {
+  width: 26px;
+  height: 3px;
+  background: var(--brown);
+  border-radius: 2px;
+}
+
+@media (max-width: 768px) {
+
+  .nav-links {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+}
+
 
 /* Footer */
 
@@ -256,46 +284,3 @@ ul{
         width: 100%;
     }
 }
-
-/* Seccion de Bienvenida con imagen */
-
-.welcome-section{
-    padding-top: 200px; 
-  display:contents;
-  justify-content: center;
-  align-items: center;
- 
-  background-color: var(--light-bg);
-}
-
-.welcome-textBox {
-  
-  justify-content: center;
-  align-items: center;
-
-  background-color: var(--light-bg);
-}
-
-.welcome-textBox h2{
-  text-align: center;
-  font-family: "Fugaz One", sans-serif;
-  color: var(--orange);
-  font-size: 6rem;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: var(--brown);
-}
-
-.welcome-image {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.welcome-image img.avatar {
-  width: 200px;
-  height: auto;
-  border-radius: 50%;
-  transition: transform 0.4s ease, filter 0.4s ease;
-}
-
