--- a/static/css/pages/admin-dashboard.css
+++ b/static/css/pages/admin-dashboard.css
@@ -50,6 +50,8 @@ h1, h2 {
   box-shadow: 0 0 6px var(--orange);
 }
 
+
+
 .filters button {
   background: var(--orange);
   color: white;
@@ -73,8 +75,8 @@ h1, h2 {
 
 /* ---------- Tablas ---------- */
 table {
-  width: 95%;
-  max-width: 1000px;
+  width: 90%;
+  max-width: 1100px;
   margin: 1rem auto;
   border-collapse: collapse;
   box-shadow: var(--shadow-lg);
@@ -82,6 +84,12 @@ table {
   overflow: hidden;
   background-color: white;
   font-size: 0.95rem;
+  /*table-layout: fixed;*/
+}
+
+.responses-table {
+
+  table-layout: fixed;
 }
 
 thead {
@@ -93,9 +101,13 @@ thead tr {
 }
 
 th, td {
+  max-width: 250px;
   padding: 0.9rem 1rem;
   text-align: left;
   border-bottom: 1px solid #f0f0f0;
+  word-break: break-word;      
+  overflow-wrap: break-word;
+  white-space: normal; 
 }
 
 td {
@@ -108,6 +120,32 @@ th {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.03em;
+}
+
+/* ---------- Responsividad ---------- */
+@media (max-width: 768px) {
+  .filters {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  table {
+    font-size: 0.70rem;
+    width: 100%;
+  }
+
+  th, td {
+    padding: 0.7rem;
+  }
+
+  th {
+    font-size: 0.5rem;
+  }
+
+
+  body {
+    padding: 1rem;
+  }
 }
 
 #toast-container {
@@ -171,33 +209,14 @@ th {
   }
 }
 
-/* ---------- Responsividad ---------- */
-@media (max-width: 768px) {
-  .filters {
-    flex-direction: column;
-    align-items: stretch;
-  }
 
-  table {
-    font-size: 0.85rem;
-    width: 100%;
-  }
-
-  th, td {
-    padding: 0.7rem;
-  }
-
-  body {
-    padding: 1rem;
-  }
-}
 
 /* ===== Botón de control principal ===== */
 .admin-controls {
   align-items: center;
   display: flex;
   justify-content: center;
-  padding: 1rem 0;
+  padding: 1rem 1rem;
 }
 
 
@@ -270,6 +289,15 @@ th {
   transform: scale(1.05);
 }
 
+/* ---------- Responsividad ---------- */
+@media (max-width: 768px) {
+  .btn-edit, .btn-materia-edit, .btn-delete, .btn-materia-delete{
+    font-size: 0.50rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+}
+
 .btn-secondary {
   font-family: "Fugaz One", sans-serif;
   background: var(--yellow);
@@ -291,11 +319,11 @@ th {
 /* Modal: oculto por defecto */
 .modal {
   position: fixed;
-  inset: 0;                 /* top:0; right:0; bottom:0; left:0; */
+  inset: 0;            
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.45);
-  display: none;            /* <-- oculto hasta que se añada .show */
+  display: none;            
   z-index: 1000;
   animation: fadeIn 0.25s ease forwards;
   box-sizing: border-box;
@@ -303,12 +331,12 @@ th {
 
 /* Mostrar modal centrado (cuando tenga .show) */
 .modal.show {
-  display: flex !important;           /* centra con flex cuando está visible */
+  display: flex !important;         
   justify-content: center !important;
   align-items: center !important;
 }
 
-/* Asegura que el contenido no quede pegado a la izquierda */
+
  .modal-content {
   margin: 0 auto;
   padding: 1.8rem 2rem;
@@ -465,4 +493,19 @@ th {
   justify-content: flex-end;
   gap: 0.75rem;
   margin-top: 0.5rem;
+}
+
+
+.flatpickr-alt-input {
+    padding: 0.6rem 1rem !important;
+    border: 2px solid var(--orange) !important;
+    border-radius: 10px !important;
+    background-color: #fffdf9 !important;
+}
+
+.flatpickr-alt-input,
+.flatpickr-input {
+    width: 120px !important;
+    min-width: 120px !important;
+    max-width: 120px !important;
 }
