--- a/templates/admin/login-admin.html
+++ b/templates/admin/login-admin.html
@@ -31,6 +31,11 @@
             <ul class="nav-links">
                 <li><a href="/">Cambiar tipo de usuarix</a></li>
             </ul>
+             <div class="hamburger" id="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
         </div>
     </nav>
 
@@ -66,7 +71,7 @@
     </form>
 
     {% if error %}
-      <p style="color:red;">{{ error }}</p>
+      <p class="error">{{ error }}</p>
     {% endif %}
   </div>
 
@@ -105,5 +110,8 @@
       </div>
      </div>
   </footer>
+
+  <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
+
 </body>
 </html>
