--- a/templates/admin/preguntas-ad.html
+++ b/templates/admin/preguntas-ad.html
@@ -36,6 +36,11 @@
             <ul class="nav-links">
                 <li><a href="{{ url_for('go_back_2') }}">Regresar</a></li>
             </ul>
+           <div class="hamburger" id="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
         </div>
     </nav>
 
@@ -162,6 +167,7 @@
       </div>
      </div>
   </footer>
+<script src="{{ url_for('static', filename='js/menu.js') }}"></script>
 
 </body>
 </html>
