--- a/templates/alumnxs/inicio-alumnxs.html
+++ b/templates/alumnxs/inicio-alumnxs.html
@@ -36,6 +36,12 @@
                 <li><a href="{{ url_for('preguntas_freq') }}">Preguntas frecuentes</a></li>
 
             </ul>
+
+                <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
         </div>
     </nav>
 
@@ -120,6 +126,7 @@
       </div>
      </div>
   </footer>
+<script src="{{ url_for('static', filename='js/menu.js') }}"></script>
 
 </body>
 </html>
